fixed_naresh_comments

--- a/index.html
+++ b/index.html
@@ -23,23 +23,17 @@
         </nav>
     </div>
     <section id="home">
-        <div>
+        <div class="about">
             <h1>Noushin Golverdikhan</h1>
-
-
             <h3>BEAUTY SPECIALIST | SALES SPECIALIST | SOCIAL MEDIA EXPERT | CUSTOMER CARE SPECIALIST</h3>
     </section>
     <section id="experience">
         <div>
-            <h4>WORKING EXPERIENCE:
-
-            </h4>
-
-            <div class="border1" style="border: 2px solid black;">
-                <h5>Beauty Specialist <span>| Denmark (Aug 2020 – Present)</span>
+            <h4>WORKING EXPERIENCE:</h4>
+            <div class="border">
+                <h5>Beauty Specialist <span>| Denmark (Aug 2020 – Present)</span></h5>
             </div>
-            </h5>
-            <div class="border2" style="border: 2px solid black;">
+            <div class="border">
                 <h5>Golvazheh Publications <span>| Iran (June 2016 – Apr 2017)</span></h5>
                     <h6>Social Media Specialist:</h6>
                         <ul>
@@ -66,9 +60,9 @@
                             </li>
                         </ul>
             </div>
-            <div class="border3" style="border: 2px solid black;">
-                <h5>Mahtouran Gasht <span>| Iran (Sep 2015 – Apr 2016)</span>
-                    <h6>Customer Care and Social Media Specialist:
+            <div class="border">
+                <h5>Mahtouran Gasht <span>| Iran (Sep 2015 – Apr 2016)</span></h5>
+                    <h6>Customer Care and Social Media Specialist:</h6>
                         <ul>
                             <li>
                                 <p>Set up and optimize company pages within each platform to increase the visibility of
@@ -94,21 +88,17 @@
                                     resolved.</p>
                             </li>
                         </ul>
-                    </h6>
-                </h5>
-            </div>
-            <div class="border4" style="border: 2px solid black;">
-                <h5>Golvazheh Publications <span>| Iran (Mar 2012 – Sep 2015)</span>
-                    <h6>Sales and Customer Care Specialist:
+                        </div>
+            <div class="border">
+                <h5>Golvazheh Publications <span>| Iran (Mar 2012 – Sep 2015)</span></h5>
+                    <h6>Sales and Customer Care Specialist:</h6>
                         <ul>
                             <li>
                                 <p>Work with the Sales Manager to develop and execute programs to make the deals and
-                                    achieve
-                                    the goals.</p>
+                                    achieve the goals.</p>
                             </li>
                             <li>
-                                <p>Work effectively within a team environment to maximize revenue potential and ensure
-                                    customer success.</p>
+                                <p>Work effectively within a team environment to maximize revenue potential and ensure customer success.</p>
                             </li>
                             <li>
                                 <p>Meet and exceed direct sales goals within assigned geographic territory.</p>
@@ -123,20 +113,13 @@
                                 <p>Contributed to market research and competitor analysis.</p>
                             </li>
                         </ul>
-                    </h6>
-                </h5>
             </div>
-            </nav>
             <hr class="hr">
-            <hr>
         </div>
     </section>
-
-
-
     <section id="education">
         <div class="certifications">
-            <h4>EDUCATION & CERTIFICATIONS
+            <h4>EDUCATION & CERTIFICATIONS:</h4>
                 <ul>
                     <li>
                         <p>Bachelor of Management, Islamic Azad University, Central Tehran Branch <span>| Tehran, Iran
@@ -146,12 +129,11 @@
                         <p>Hack your Future <span>| Copenhagen, Denmark (In progress)</span></p>
                     </li>
                 </ul>
-            </h4>
         </div>
     </section>
-
     <section id="skills">
         <div class="technics">
+            <hr class="hr">
             <h4>TECHNICAL SKILLS:</h4>
             <ul>
                 <li>
@@ -169,21 +151,17 @@
             </ul>
         </div>
     </section>
-
-
-
+    <hr class="hr">
     <section id="portfolio">
         <div>
             <h4>PORTFOLIO:</h4>
             <ul>
                 <li class="survey">Support satisfaction survey form for IKEA</li>
             </ul>
-
-
-
         </div>
     </section>
-
+<div>
+    <hr class="hr">
     <h4>LANGUAGES:</h4>
     <ul>
         <li>
@@ -193,8 +171,10 @@
             <p>Persian <span>(Native)</span></p>
         </li>
     </ul>
+    </div>
     <section id="contact">
         <div class="contact">
+            <hr class="hr">
             <h4>CONTACT</h4>
                 <ul>
                     <li>
